--- a/风控系统/携程在线风控系统架构.md
+++ b/风控系统/携程在线风控系统架构.md
@@ -2,11 +2,13 @@
 为了应对日益严重的支付欺诈，携程在线风控系统2011年正式上线。现在，在线风控系统支撑了携程每日1亿+的风险事件实时处理和100亿+的准实时数据预处理；系统中运行的总规则数和总模型数分别达到了1万+和20+；风控的范围从单纯的支付风控扩展到了各种类型的业务风控（例如：恶意抢占资源、黄牛抢购、商家刷单）。
 
 下图是当前在线风控系统的整体技术架构图：
+![picture](https://raw.githubusercontent.com/zhuangjinxin/design/master/image/20171011/xiecheng/1.png)
 
 当前的系统结构是比较主流的风控系统结构，包含了决策引擎、Counter、名单库、用户画像、离线处理、离线分析和监控各主要模块。携程的在线风控系统发展到这个阶段一共经过了3次重大的改版。
 
 #### 一、最初创立
 2011年上线，使用了.net开发的服务，数据库使用SQL Server，简要架构图如下：
+![picture](https://raw.githubusercontent.com/zhuangjinxin/design/master/image/20171011/xiecheng/2.png)
 
 这个时候的风控服务将所有在线决策功能整合在一个系统内实现，包括规则判断、名单库、流量计算；而这些逻辑都基于数据库实现。
 
@@ -18,6 +20,7 @@
 
 #### 二、流量查询性能优化改版
 由于这个时候的主要性能瓶颈在于数据库实现的流量查询，这次优化主要方向就是优化流量查询的实现：在原来单个数据库的基础上，采用分库分表的方式均摊压力，以达到更快的响应时间和更高的吞吐量。架构图如下：
+![picture](https://raw.githubusercontent.com/zhuangjinxin/design/master/image/20171011/xiecheng/3.png)
 
 优化之后，流量库和业务库分离，流量库使用多个数据库实例，使用hash的方式拆分流量明细，统计的时候使用SQL。由于压力被多个数据库实例分摊，使得系统的流量查询性能得到了较好的提升。
 
@@ -32,12 +35,14 @@
 
 #### 三、风控3.0（Aegis）
 从这个版本开始，风控系统全面转向Java开发，同时将核心模块独立成服务，定义了各子系统的边界以及在整个系统中的定位和作用。相比之前功能性的应用，Aegis是一个平台化的风控系统。以下是简化的系统架构图：
+![picture](https://raw.githubusercontent.com/zhuangjinxin/design/master/image/20171011/xiecheng/4.png)
 
 Aegis开始使用Drools脚本用于规则的编写，极大的提高了规则团队对突发事件的响应时间，紧急规则一般10分钟就能上线。
 
 在结构上风控引擎分为同步引擎和异步引擎，同步引擎运行用于实时判断风险结果的规则和模型；异步引擎则负责验证规则/模型、数据分发、关键数据落地等逻辑。同步/异步引擎设计成无状态的，方便随时扩容。
 
 Aegis在流量统计上自研发了Counter Server，这是一个定制化的类TSDB服务，任意精度任意时间窗口的查询控制在5ms，同时支持高并发查询，相较于SQL的实现提升了上千倍的性能。支撑了现在风控系统内个服务每日百亿次的查询。下图是其简要的结构说明：
+![picture](https://raw.githubusercontent.com/zhuangjinxin/design/master/image/20171011/xiecheng/5.png)
 
 在数据预处理层面独立出了风险画像和DataProxy两个服务。
 
@@ -58,10 +63,13 @@ Aegis系统上线后，新风控业务接入时间缩短到一周，在10x流量
 之后Aegis家族又增加了两个重要的子系统：Sessionizer和DeviceID。这两个服务属于准实时处理应用，但是都通过预热的方式为引擎提供了实时数据。
 
 Sessionizer，归约用户的页面访问session为反应用户的操作的RiskSession，流程如下图：
+![picture](https://raw.githubusercontent.com/zhuangjinxin/design/master/image/20171011/xiecheng/6.png)
 
 其数据处理使用了自研的大数据处理系统Chloro，架构图如下
+![picture](https://raw.githubusercontent.com/zhuangjinxin/design/master/image/20171011/xiecheng/7.png)
 
 DeviceID服务，用于指纹数据采集和指纹识别生成，从而判断设备的唯一性，同样也借助了Chloro进行数据处理，系统示意图如下：
+![picture](https://raw.githubusercontent.com/zhuangjinxin/design/master/image/20171011/xiecheng/8.png)
 
 这两个服务为规则和模型以及人工处理提供了非常关键的判断数据，进一步提高了风险判断的准确性。
 
@@ -70,6 +78,8 @@ DeviceID服务，用于指纹数据采集和指纹识别生成，从而判断设
 #### 四、针对实时风控的性能优化
 性能优化从1年前开始，可以分以下几个主要优化：
 1、规则分布式并行执行
+![picture](https://raw.githubusercontent.com/zhuangjinxin/design/master/image/20171011/xiecheng/9.png)
+
 将单个事件需要执行的规则和模型拆分到同一逻辑组内多个服务器执行，最终合并数据。这个优化将平均耗时降到了200+ms
 
 2、脚本执行引擎切换Drools到Java
