--- a/风控系统/携程在线风控系统架构.md
+++ b/风控系统/携程在线风控系统架构.md
@@ -3,7 +3,7 @@
 
 下图是当前在线风控系统的整体技术架构图：
 
-![picture](https://raw.githubusercontent.com/zhuangjinxin/design/master/image/20171011/xiecheng/1.png)
+![Image](https://raw.githubusercontent.com/zhuangjinxin/design/master/image/20171011/xiecheng/1.png)
 
 当前的系统结构是比较主流的风控系统结构，包含了决策引擎、Counter、名单库、用户画像、离线处理、离线分析和监控各主要模块。携程的在线风控系统发展到这个阶段一共经过了3次重大的改版。
 
